Changed background-color on 'kts' burnished font because display problem on FF.  Changed z-index for slide-out-right panel so that it is ALWAYS displayed over the polaroid stack.  Corrected browser display extensions so the rounded corners on the slide-out panel look good on Firefox

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,7 +177,8 @@ transform-origin: 50% 50%;
 	margin: -51px -19px;
 	font-size: 8em;
 	white-space: nowrap;
-	background-color: black;
+  /* Scooter: I removed the background-color: black; due to a display issue on Mozilla showing a black box on the first part of the "Know Thy Selfie" burnished onto the wood background 3/25/2014 */
+/*	background-color: black;*/
   color: transparent;
   text-shadow: 0px 0px 2px rgba(0,0,0,0.9);
   -webkit-background-clip: text;
